--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- SEO -->
-    <meta
-      name="robots"
-      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
-    />
-
     <!-- favicon -->
     <link
       rel="icon"
@@ -34,27 +27,39 @@
       Recuperação Tributária - Sua empresa pode ter tributos a Receber -
       Recupere impostos indevidos
     </title>
-
     <!-- SEO -->
     <meta
       name="robots"
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
-
     <meta
       name="description"
       content="Recuperação Tributária - Sua empresa pode ter tributos a Receber - Solicite uma Análise Gratuita"
     />
-    <link rel="canonical" href="https://recuperetributos.com.br" />
+    <!-- <link rel="canonical" href="https://recuperetributos.com.br" /> -->
+    <!-- <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.css"
+    /> -->
   </head>
-  <body>
-    <!-- header -->
-    <header></header>
 
-    <!-- footer -->
-    <footer class="py-5">© Todos os direitos Reservados</footer>
+  <body>
+    <input id="ckb-menu" type="checkbox" />
+    <label id="bt-x" for="ckb-menu">X</label>
+    <label id="bt-menu" for="ckb-menu">&#9776;</label>
+    <header>
+      <div id="logo">FULL STACK</div>
+      <nav class="menu">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./portifolio.html"> Portfólio </a></li>
+          <li><a href="./contato.html">Contato </a></li>
+        </ul>
+      </nav>
+    </header>
+
     <!-- whatsapp -->
-    <nav class="navbar fixed-bottom logo-ws-position">
+    <!-- <nav class="navbar fixed-bottom logo-ws-position">
       <div class="container-fluid">
         <a
           target="_blank"
@@ -69,6 +74,6 @@
           />
         </a>
       </div>
-    </nav>
+    </nav> -->
   </body>
 </html>
