--- a/src/index.html
+++ b/src/index.html
@@ -41,22 +41,56 @@
       rel="stylesheet"
       href="../node_modules/bootstrap/dist/css/bootstrap.css"
     /> -->
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.css"
+    />
   </head>
 
   <body>
-    <input id="ckb-menu" type="checkbox" />
-    <label id="bt-x" for="ckb-menu">X</label>
-    <label id="bt-menu" for="ckb-menu">&#9776;</label>
     <header>
-      <div id="logo">FULL STACK</div>
-      <nav class="menu">
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./portifolio.html"> Portfólio </a></li>
-          <li><a href="./contato.html">Contato </a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg test p-defaut">
+        <div class="container bg-defaut">
+          <a class="navbar-brand fw-bold" href="#">FULL STACK</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Disabled</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
+
+    <main class="test2">
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
 
     <!-- whatsapp -->
     <!-- <nav class="navbar fixed-bottom logo-ws-position">
