--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg test p-defaut">
+      <nav class="navbar navbar-expand-lg p-defaut">
         <div class="container bg-defaut">
           <a class="navbar-brand fw-bold" href="#">FULL STACK</a>
           <button
@@ -69,31 +69,414 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a
+                  class="nav-link nav-link__border nav-link__border-t"
+                  aria-current="page"
+                  href="#portifolio"
+                  >Portifólio</a
+                >
+              </li>
+              <li class="nav-item nav-link__border">
+                <a class="nav-link" href="#habilidades">Habilidade</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">Disabled</a>
+                <a class="nav-link" href="#contato">Contato</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
+    <main class="container-grid border-defaut__top">
+      <!-- left - main esquerda -->
+      <section class="grid-l bg-img-1">
+        <div class="container">
+          <div
+            class="container d-flex flex-column align-items-start w-flex-l justify-content-end"
+          >
+            <div class="mb-5r">
+              <h2 class="fs-5 mb-0 t-h2-l">Developer</h2>
+              <h1 class="mb-4">FRONT-END</h1>
+              <h6 class="text-uppercase t-h2-l">Olá, sou Fábio Resende</h6>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- rigth - main direita -->
+      <section class="grid-r bg-img-2">
+        <div class="container">
+          <div
+            class="container d-flex flex-column w-flex-r justify-content-between text-start text-lg-end"
+          >
+            <div>
+              <h3 class="text-verde h1 mb-0 mt-5r">FREELANCER</h3>
+              <h3 class="text-verde-claro h1 mb-0">DEVELOPER</h3>
+              <h3 class="text-cinza2 h1 mb-0">DESIGNER</h3>
+            </div>
+            <div class="mb-5r">
+              <h6>PENSO, PLANEJO E REALIZO</h6>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- abordagem -->
+      <section
+        class="grid-abord text-cinza3 border-defaut__top bg-img-abort py-5r py-5r__lg-8r shadow-lg b-radius-50"
+      >
+        <div class="container barra-lateral-vc">
+          <h3 class="h1 mb-4 mb-lg-5 fw-light">Abordagem</h3>
+          <p class="text-cinza2 fs-3">
+            Minha abordagem principal é ter um site que fortaleça a sua marca,
+            garantindo facilidade de uso e simplicidade para o seu público, com
+            padrões de design limpos e interações ponderadas, totalmente
+            responsivos e impecáveis.
+          </p>
+        </div>
+      </section>
+      <!-- personalisado exclusivo -->
+      <section
+        class="grid-perso text-color-bg border-defaut__top bg-verde py-5r py-5r__lg-8r"
+      >
+        <div class="border-destak position-absolute"></div>
+        <div class="container barra-lateral-vc">
+          <h3 class="h1 mb-4 fw-light">Exclusivo</h3>
 
-    <main class="test2">
-      <section></section>
-      <section></section>
+          <h1 class="text-color-bg display-6 ps-22 my-7r fw-bold">
+            Site <br />
+            Landing page<br />
+            eCommerce
+          </h1>
+          <p class="fs-3 mb-4">
+            Totalmente personalizado para você e seu negócio.
+          </p>
+          <p class="fs-3">Tudo no lugar certo e no momento exato.</p>
+        </div>
+      </section>
+      <!-- portifolio -->
+      <section id="portifolio" class="grid-porti py-5r py-5r__lg-8r">
+        <div class="container">
+          <div class="barra-lateral-vc">
+            <h3 class="h1 mb-5 mb-lg-5 fw-light">Portifólio</h3>
+          </div>
+        </div>
+        <div class="container">
+          <div
+            id="carouselExampleInterval"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img
+                  src="./assets/images/command.png"
+                  class="d-block w-100"
+                  alt="teste 1"
+                  loading="lazy"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>
+                    Some representative placeholder content for the third slide.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img
+                  src="./assets/images/bootstrap-logo-shadow.png"
+                  class="d-block w-100"
+                  alt="teste2"
+                  loading="lazy"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./assets/images/bootstrap-logo-shadow.png"
+                  class="d-block w-100"
+                  alt="teste 1"
+                  loading="lazy"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleInterval"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleInterval"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- Habilidades -->
+      <section
+        id="habilidades"
+        class="grid-hab border-defaut__top border-defaut__bottom py-5r py-5r__lg-8r"
+      >
+        <div class="container barra-lateral-vc">
+          <h3 class="h1 mb-5 mb-lg-5 fw-light">Habilidades</h3>
+        </div>
+
+        <div class="p-3">
+          <div
+            class="container d-flex flex-wrap justify-content-center gap-4 py-5 px-3 b-radius-50 shadow"
+          >
+            <div class="item">
+              <img
+                src="./assets/images/html5-logo-2834x4000.png"
+                alt="HTML 5"
+                loading="lazy"
+              />
+              <span class="legenda">HTML5</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/css-3-logo-2834x4000.png"
+                alt="CSS 3"
+                loading="lazy"
+              />
+              <span class="legenda">CSS3</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/js2.png"
+                alt="JavaScript"
+                loading="lazy"
+              />
+              <span class="legenda">JavaScript</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/logo512.png"
+                alt="React"
+                loading="lazy"
+              />
+              <span class="legenda">React</span>
+            </div>
+            <div class="item">
+              <img src="./assets/images/node.png" alt="Node" loading="lazy" />
+              <span class="legenda">Node.js</span>
+            </div>
+            <div class="item">
+              <img src="./assets/images/git.png" alt="Git" loading="lazy" />
+              <span class="legenda">Git</span>
+            </div>
+            <div class="item">
+              <img src="./assets/images/npm.png" alt="NPM" loading="lazy" />
+              <span class="legenda">NPM</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/webpack2.png"
+                alt="webpack"
+                loading="lazy"
+              />
+              <span class="legenda">WebPack</span>
+            </div>
+            <div class="item">
+              <img src="./assets/images/babel.png" alt="Babel" loading="lazy" />
+              <span class="legenda">Babel</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/github.png"
+                alt="GitHub"
+                loading="lazy"
+              />
+              <span class="legenda">GitHub</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/bootstrap-logo-shadow.png"
+                alt="Boostratp"
+                loading="lazy"
+              />
+              <span class="legenda">Bootstrap</span>
+            </div>
+            <div class="item">
+              <img src="./assets/images/sass.png" alt="SASS" loading="lazy" />
+              <span class="legenda">Sass</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/vscode.png"
+                alt="VsCode"
+                loading="lazy"
+              />
+              <span class="legenda">VS-Code</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/pngegg.png"
+                alt="JQuery"
+                loading="lazy"
+              />
+              <span class="legenda">jQuery</span>
+            </div>
+            <div class="item">
+              <img src="./assets/images/gulp.png" alt="Gulp" loading="lazy" />
+              <span class="legenda">Gulp</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/command.png"
+                alt="Command line"
+                loading="lazy"
+              />
+              <span class="legenda">Command Line</span>
+            </div>
+            <div class="item">
+              <img src="./assets/images/figma.png" alt="Figma" loading="lazy" />
+              <span class="legenda">Figma</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/woo.png"
+                alt="WooCommerce"
+                loading="lazy"
+              />
+              <span class="legenda">WooCommerce</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/wp.png"
+                alt="Wordpress"
+                loading="lazy"
+              />
+              <span class="legenda">WordPress</span>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/opencart.png"
+                alt="opencart"
+                loading="lazy"
+              />
+              <span class="legenda">OpenCart</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- contato -->
+      <section id="contato" class="grid-cont py-5r py-5r__lg-8r">
+        <div class="container">
+          <!-- contato left -->
+          <div class="contato-l d-block">
+            <div class="container barra-lateral-vc">
+              <h3 class="h1 mb-5 fw-light">Contato</h3>
+            </div>
+            <figure class="fig-resp-l">
+              <img
+                src="./assets/images/tomar-cfe2.jpg"
+                alt="Vamos Tomar um café?"
+                class="mb-5"
+              />
+              <!-- <figcaption>Fig.1 - Tomando um cafe</figcaption> -->
+            </figure>
+            <h4 class="fs-3">Quer desenvolver um projeto na web?</h4>
+            <p class="mb-4">
+              Preencha o formulário abaixo com as suas dúvidas, agende uma
+              visita virtual ou venha tomar um café e conversamos pessoalmente.
+            </p>
+            <!-- form -->
+            <form
+              id="form-contact"
+              accept-charset="utf-8"
+              method="post"
+              action="https://formspree.io/f/mwkzvbvd"
+            >
+              <!-- nome -->
+              <div class="form-floating mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nome"
+                  placeholder="Digite seu nome"
+                  required="required"
+                  name="nome"
+                />
+                <label for="nome">Nome</label>
+              </div>
+              <!-- email -->
+              <div class="form-floating">
+                <input
+                  type="email"
+                  class="form-control mb-3"
+                  id="email"
+                  placeholder="nome@exemplo.com"
+                  required="required"
+                  name="email"
+                />
+                <label for="email">Email</label>
+              </div>
+              <!-- tel -->
+              <div class="form-floating mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="tel"
+                  placeholder="319999-9999"
+                  required="required"
+                  name="tel"
+                />
+                <label for="tel">Telefone + DDD</label>
+              </div>
+              <!-- coment -->
+              <div class="form-floating mb-3">
+                <textarea
+                  class="form-control"
+                  placeholder="Deixe um comentário aqui"
+                  id="comment"
+                  name="comentario"
+                ></textarea>
+                <label for="comment">Comentário</label>
+              </div>
+              <button type="submit" class="btn btn-lg btn-primary">
+                Enviar
+              </button>
+            </form>
+            <p id="my-form-status" class="alert alert-success fs-5"></p>
+          </div>
+          <!-- contato img right -->
+          <div class="contato-r d-block">
+            <figure class="fig-resp-r">
+              <img
+                src="./assets/images/tomar-cfe2.jpg"
+                alt="Vamos Tomar um café?"
+                loading="lazy"
+              />
+              <!-- <figcaption>Fig.1 - Tomando um cafe</figcaption> -->
+            </figure>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+
+    <footer class="bg-verde text-color-bg">
+      <div
+        class="container d-flex footer justify-content-center align-items-center"
+      >
+        <p>© 2022 Todos os direitos Reservados</p>
+      </div>
+    </footer>
 
     <!-- whatsapp -->
-    <!-- <nav class="navbar fixed-bottom logo-ws-position">
+    <nav class="navbar fixed-bottom logo-ws-position">
       <div class="container-fluid">
         <a
           target="_blank"
@@ -108,6 +491,6 @@
           />
         </a>
       </div>
-    </nav> -->
+    </nav>
   </body>
 </html>
