--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
     <header>
       <nav class="navbar navbar-expand-lg p-defaut">
         <div class="container bg-defaut">
-          <a class="navbar-brand fw-bold" href="#">FULL STACK</a>
+          <a class="navbar-brand fw-bold" href="#">webDEV.</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -97,13 +97,13 @@
             <div class="mb-5r">
               <h2 class="fs-5 mb-0 t-h2-l">Developer</h2>
               <h1 class="mb-4">FRONT-END</h1>
-              <h6 class="text-uppercase t-h2-l">Olá, sou Fábio Resende</h6>
+              <h6 class="text-uppercase t-h2-l fs-5">Olá, sou Fábio Resende</h6>
             </div>
           </div>
         </div>
       </section>
       <!-- rigth - main direita -->
-      <section class="grid-r bg-img-2">
+      <section class="grid-r bg-img-2 border-defaut__botton b-radius3-50">
         <div class="container">
           <div
             class="container d-flex flex-column w-flex-r justify-content-between text-start text-lg-end"
@@ -114,14 +114,25 @@
               <h3 class="text-cinza2 h1 mb-0">DESIGNER</h3>
             </div>
             <div class="mb-5r">
-              <h6>PENSO, PLANEJO E REALIZO</h6>
+              <h6>
+                <span
+                  class="bg-defaut bg-opacity-50 py-1 pe-2 rounded-end display-6"
+                >
+                  PENSO, PLANEJO</span
+                ><br />
+                <span
+                  class="bg-defaut bg-opacity-50 py-1 pe-2 rounded-end display-6"
+                >
+                  REALIZO</span
+                >
+              </h6>
             </div>
           </div>
         </div>
       </section>
       <!-- abordagem -->
       <section
-        class="grid-abord text-cinza3 border-defaut__top bg-img-abort py-5r py-5r__lg-8r shadow-lg b-radius-50"
+        class="grid-abord text-cinza3 bg-img-abort py-5r py-5r__lg-8r shadow-lg"
       >
         <div class="container barra-lateral-vc">
           <h3 class="h1 mb-4 mb-lg-5 fw-light">Abordagem</h3>
@@ -471,7 +482,7 @@
       <div
         class="container d-flex footer justify-content-center align-items-center"
       >
-        <p>© 2022 Todos os direitos Reservados</p>
+        <p class="fs-6">© 2022 Todos os direitos Reservados</p>
       </div>
     </footer>
 
