--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
     <header>
       <nav class="navbar navbar-expand-lg p-defaut">
         <div class="container bg-defaut">
-          <a class="navbar-brand fw-bold" href="#">webDEV.</a>
+          <a class="navbar-brand fw-bold" href="#">WEBDEV</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -118,7 +118,7 @@
                 <span
                   class="bg-defaut bg-opacity-50 py-1 pe-2 rounded-end display-6"
                 >
-                  PENSO, PLANEJO</span
+                  PENSO, PLANEJO E</span
                 ><br />
                 <span
                   class="bg-defaut bg-opacity-50 py-1 pe-2 rounded-end display-6"
@@ -399,8 +399,8 @@
               />
               <!-- <figcaption>Fig.1 - Tomando um cafe</figcaption> -->
             </figure>
-            <h4 class="fs-3">Quer desenvolver um projeto na web?</h4>
-            <p class="mb-4">
+            <h4 class="display-6 mb-4">Quer desenvolver um projeto na web?</h4>
+            <p class="mb-4 fs-3">
               Preencha o formulário abaixo com as suas dúvidas, agende uma
               visita virtual ou venha tomar um café e conversamos pessoalmente.
             </p>
