--- a/src/index.html
+++ b/src/index.html
@@ -160,6 +160,10 @@
           <p class="fs-3 mb-4">
             Totalmente personalizado para você e seu negócio.
           </p>
+          <p class="fs-3 mb-4">
+            Design adequado, carregamento limpo, flexível (mobile first) e
+            rápido.
+          </p>
           <p class="fs-3">Tudo no lugar certo e no momento exato.</p>
         </div>
       </section>
@@ -172,46 +176,78 @@
         </div>
         <div class="container">
           <div
-            id="carouselExampleInterval"
+            id="carouselPortifolio"
             class="carousel slide"
             data-bs-ride="carousel"
           >
+            <!-- <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselPortifolio"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselPortifolio"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselPortifolio"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div> -->
+
             <div class="carousel-inner">
+              <!-- essency -->
               <div class="carousel-item active" data-bs-interval="2000">
+                <a
+                  href="https://ecommerce.webdev.mudedevez.com/"
+                  target="_blank"
+                >
+                  <img
+                    src="./assets/images/essency4.png"
+                    class="d-block w-100"
+                    alt="site ecommerce essency"
+                    loading="lazy"
+                  />
+                  <!-- <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>
+                      Some representative placeholder content for the third
+                      slide.
+                    </p>
+                  </div> -->
+                </a>
+              </div>
+              <!-- site recupere tributos -->
+              <!-- <div class="carousel-item" data-bs-interval="2000">
                 <img
-                  src="./assets/images/command.png"
+                  src="./assets/images/essency3.png"
+                  class="d-block w-100"
+                  alt="Site ecommerce essency"
+                  loading="lazy"
+                />
+              </div> -->
+              <!-- seu site -->
+              <!-- <div class="carousel-item">
+                <img
+                  src="./assets/images/essency3.png"
                   class="d-block w-100"
                   alt="teste 1"
                   loading="lazy"
                 />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>
-                    Some representative placeholder content for the third slide.
-                  </p>
-                </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img
-                  src="./assets/images/bootstrap-logo-shadow.png"
-                  class="d-block w-100"
-                  alt="teste2"
-                  loading="lazy"
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="./assets/images/bootstrap-logo-shadow.png"
-                  class="d-block w-100"
-                  alt="teste 1"
-                  loading="lazy"
-                />
-              </div>
+              </div> -->
             </div>
             <button
               class="carousel-control-prev"
               type="button"
-              data-bs-target="#carouselExampleInterval"
+              data-bs-target="#carouselPortifolio"
               data-bs-slide="prev"
             >
               <span
@@ -223,7 +259,7 @@
             <button
               class="carousel-control-next"
               type="button"
-              data-bs-target="#carouselExampleInterval"
+              data-bs-target="#carouselPortifolio"
               data-bs-slide="next"
             >
               <span
