para Inteligencia digital

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,11 @@
     <header>
       <nav class="navbar navbar-expand-lg p-defaut">
         <div class="container bg-defaut">
-          <a class="navbar-brand fw-bold" href="#">FRONT-END</a>
+          <div class="div">
+            <a class="navbar-brand fw-bold" href="#">FRONT-END</a>
+            <p class="fw-light navbar-brand" href="#">Inteligencia Digital</p>
+          </div>
+
           <button
             class="navbar-toggler"
             type="button"
