add inteligencia deploy auto

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,9 @@
         <div class="container bg-defaut">
           <div class="div">
             <a class="navbar-brand fw-bold" href="#">FRONT-END</a>
-            <p class="fw-light navbar-brand" href="#">Inteligencia Digital</p>
+            <p class="fw-light navbar-brand int" href="#">
+              Inteligencia Digital
+            </p>
           </div>
 
           <button
