--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       content="./assets/images/favicon.ico"
     />
     <title>
-      Fábio Resende - Desenvolvedor Fornt-end - Faça agora o seu Website,
+      Fábio Resende - Desenvolvedor Fornt-end - Faça agora seu Website,
       e-commerce ou Landing Page
     </title>
     <!-- SEO -->
@@ -43,7 +43,7 @@
           <div class="div">
             <a class="navbar-brand fw-bold" href="#">FRONT-END</a>
             <p class="fw-light navbar-brand int" href="#">
-              Inteligencia Digital
+              Inteligencia Digital.
             </p>
           </div>
 
