--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,13 @@
       name="msapplication-TileImage"
       content="./assets/images/favicon.ico"
     />
-    <title>
-      Fábio Resende - Desenvolvedor Fornt-end - Faça agora seu Website,
-      e-commerce ou Landing Page
-    </title>
+    <title>Inteligência Digital</title>
     <!-- SEO -->
     <meta
       name="robots"
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
-    <meta
-      name="description"
-      content="Faça agora um website ou ecommerce de qualidade, totalmente responsivo, ajustado para o seu público e com alto desempenho"
-    />
+    <meta name="description" content="Inteligência Digital" />
     <!-- <link rel="canonical" href="https://recuperetributos.com.br" /> -->
     <!-- <link
       rel="stylesheet"
