--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
       rel="stylesheet"
       href="../node_modules/bootstrap/dist/css/bootstrap.css"
     /> -->
+    <!-- ***************************** -->
     <link
       rel="stylesheet"
       href="../node_modules/bootstrap/dist/css/bootstrap.css"
@@ -35,9 +36,9 @@
       <nav class="navbar navbar-expand-lg p-defaut">
         <div class="container bg-defaut">
           <div class="div">
-            <a class="navbar-brand fw-bold" href="#">FRONT-END</a>
+            <a class="navbar-brand fw-bold" href="#">TOPINDEV</a>
             <p class="fw-light navbar-brand int" href="#">
-              Inteligencia Digital.!
+              Inteligencia Digital
             </p>
           </div>
 
@@ -57,17 +58,17 @@
             id="navbarNav"
           >
             <ul class="navbar-nav">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a
                   class="nav-link nav-link__border nav-link__border-t"
                   aria-current="page"
                   href="#portifolio"
                   >Portifólio</a
                 >
-              </li>
-              <li class="nav-item nav-link__border">
+              </li> -->
+              <!-- <li class="nav-item nav-link__border">
                 <a class="nav-link" href="#habilidades">Habilidade</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="#contato">Contato</a>
               </li>
@@ -84,8 +85,8 @@
             class="container d-flex flex-column align-items-start w-flex-l justify-content-end"
           >
             <div class="mb-5r">
-              <h2 class="fs-5 mb-0 t-h2-l">Developer</h2>
-              <h1 class="mb-4">FRONT-END</h1>
+              <!-- <h2 class="fs-5 mb-0 t-h2-l">Developer</h2> -->
+              <h1 class="mb-4">Developer</h1>
               <h6 class="text-uppercase t-h2-l fs-5">Olá, sou Fábio Resende</h6>
             </div>
           </div>
@@ -100,7 +101,7 @@
             <div>
               <h3 class="text-verde h1 mb-0 mt-5r">FREELANCER</h3>
               <h3 class="text-verde-claro h1 mb-0">DEVELOPER</h3>
-              <h3 class="text-cinza2 h1 mb-0">DESIGNER</h3>
+              <!-- <h3 class="text-cinza2 h1 mb-0">DESIGNER</h3> -->
             </div>
             <div class="mb-5r">
               <h6>
@@ -126,10 +127,9 @@
         <div class="container barra-lateral-vc">
           <h3 class="h1 mb-4 mb-lg-5 fw-light">Abordagem</h3>
           <p class="text-cinza2 fs-3">
-            Minha abordagem principal é ter um site que fortaleça a sua marca,
-            garantindo facilidade de uso e simplicidade para o seu público, com
-            padrões de design limpos e interações ponderadas, totalmente
-            responsivos e impecáveis.
+            Minha abordagem principal é desenvolver soluções adequadas que
+            encontrem a precisão e simplicidade adequadas para que sua marca ou
+            seu negócio vá além do objetivo desejado.
           </p>
         </div>
       </section>
@@ -142,22 +142,19 @@
           <h3 class="h1 mb-4 fw-light">Exclusivo</h3>
 
           <h1 class="text-color-bg display-6 ps-22 my-7r fw-bold">
-            Site <br />
-            Landing page<br />
-            eCommerce
+            Projetos Web <br />
+            Intelegência de Padrões<br />
+            Análise de Dados
           </h1>
           <p class="fs-3 mb-4">
             Totalmente personalizado para você e seu negócio.
           </p>
-          <p class="fs-3 mb-4">
-            Design adequado, carregamento limpo, flexível (mobile first) e
-            rápido.
-          </p>
+          <p class="fs-3 mb-4">Estrutura adequada e flexível</p>
           <p class="fs-3">Tudo no lugar certo e no momento exato.</p>
         </div>
       </section>
       <!-- portifolio -->
-      <section id="portifolio" class="grid-porti py-5r py-5r__lg-8r">
+      <!-- <section id="portifolio" class="grid-porti py-5r py-5r__lg-8r">
         <div class="container">
           <div class="barra-lateral-vc">
             <h3 class="h1 mb-5 mb-lg-5 fw-light">Portifólio</h3>
@@ -169,7 +166,7 @@
             class="carousel slide"
             data-bs-ride="carousel"
           >
-            <!-- <div class="carousel-indicators">
+           <div class="carousel-indicators">
               <button
                 type="button"
                 data-bs-target="#carouselPortifolio"
@@ -190,10 +187,10 @@
                 data-bs-slide-to="2"
                 aria-label="Slide 3"
               ></button>
-            </div> -->
+            </div>
 
             <div class="carousel-inner">
-              <!-- essency -->
+              essency 
               <div class="carousel-item active" data-bs-interval="5000">
                 <a
                   href="https://ecommerce.webdev.mudedevez.com/"
@@ -205,16 +202,16 @@
                     alt="site ecommerce essency"
                     loading="lazy"
                   />
-                  <!-- <div class="carousel-caption d-none d-md-block">
+                   <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>
                       Some representative placeholder content for the third
                       slide.
                     </p>
-                  </div> -->
+                  </div> 
                 </a>
               </div>
-              <!-- site recupere tributos -->
+              site recupere tributos 
               <div class="carousel-item" data-bs-interval="5000">
                 <a
                   href="https://curso-terapia-holistica.mudedevez.com/terapia/"
@@ -228,15 +225,15 @@
                   />
                 </a>
               </div>
-              <!-- seu site -->
-              <!-- <div class="carousel-item">
+               seu site 
+              <div class="carousel-item">
                 <img
                   src="./assets/images/essency3.png"
                   class="d-block w-100"
                   alt="teste 1"
                   loading="lazy"
                 />
-              </div> -->
+              </div> 
             </div>
             <button
               class="carousel-control-prev"
@@ -264,9 +261,9 @@
             </button>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- Habilidades -->
-      <section
+      <!-- <section
         id="habilidades"
         class="grid-hab border-defaut__top border-defaut__bottom py-5r py-5r__lg-8r"
       >
@@ -412,7 +409,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- contato -->
       <section id="contato" class="grid-cont py-5r py-5r__lg-8r">
         <div class="container">
