--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
             Totalmente personalizado para você e seu negócio.
           </p>
           <p class="fs-3 mb-4">Estrutura adequada e flexível</p>
-          <p class="fs-3">Tudo no lugar certo e no momento exato</p>
+          <p class="fs-3">Tudo no lugar certo e no momento exato.</p>
         </div>
       </section>
       <!-- portifolio -->
